--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 
         <div class="search-box">
             <form action="{{ url_for('ultra_search') }}" method="POST" class="search-form">
-                <input type="text" name="query" id="search-input" placeholder="Symbole (ex: MC.PA, AAPL)..." required autocomplete="off" value="{{ symbol|default('') }}">
+                <input type="text" name="query" id="search-input" placeholder="Ticker (MC.PA) ou Code ISIN (FR00...)" required autocomplete="off" value="{{ symbol|default('') }}">
                 <button type="submit" class="btn-search">Analyser</button>
             </form>
             <div id="autocomplete-results" style="position:absolute; width:100%; background:white; z-index:100; border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,0.1); display:none;"></div>
